primitives/api/test/tests/ui/impl_incorrect_method_signature.stderr
error[E0053]: method `test` has an incompatible type for trait
  --> tests/ui/impl_incorrect_method_signature.rs:16:17
   |
16 |         fn test(data: String) {}
   |                       ^^^^^^
   |                       |
   |                       expected `u64`, found `std::string::String`
   |                       help: change the parameter type to match the trait: `u64`
   |
note: type in trait
  --> tests/ui/impl_incorrect_method_signature.rs:10:17
   |
10 |         fn test(data: u64);
   |                       ^^^
   = note: expected signature `fn(u64)`
              found signature `fn(std::string::String)`

error[E0308]: mismatched types
  --> tests/ui/impl_incorrect_method_signature.rs:16:11
   |
14 | / sp_api::impl_runtime_apis! {
15 | |     impl self::Api<Block> for Runtime {
16 | |         fn test(data: String) {}
   | |                 ^^^^ expected `u64`, found `String`
17 | |     }
...  |
29 | |     }
30 | | }
   | |_- arguments to this function are incorrect
   |
note: associated function defined here
  --> tests/ui/impl_incorrect_method_signature.rs:10:6
   |
10 |         fn test(data: u64);
   |            ^^^^
